--- a/dillon_votaw/express/templates/package.json
+++ b/dillon_votaw/express/templates/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^2.0.4"
   }
 }
