--- a/matt_tucker/demos/tasks/package.json
+++ b/matt_tucker/demos/tasks/package.json
@@ -2,7 +2,7 @@
   "name": "default_express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
     "express-session": "^1.15.6",
     "path": "^0.12.7",
     "mongoose": "^4.13.3"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
